--- a/seller-app/src/main/resources/templates/products/edit.html
+++ b/seller-app/src/main/resources/templates/products/edit.html
@@ -179,6 +179,11 @@
             <input type="number" name="price" step="0.01" th:value="${product?.price}" required>
         </label>
 
+        <label>
+            Измените колличество товаров на складе:
+            <input type="number" name="count" th:value="${product?.count}" required>
+        </label>
+
         <!-- Блок выбора категории -->
         <label>
             Категория:
